<resources>
    <string name="app_name">Lab3_Kalkulator</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="clear">C</string>
    <string name="exponent">^</string>
    <string name="parentheses">( )</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="plusMinus">+/-</string>
    <string name="equal">=</string>
    <string name="point">.</string>

    <string name="sin">sin(x)</string>
    <string name="cos">cos(x)</string>
    <string name="tg">tg(x)</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="radians">Rad</string>
    <string name="pi">π</string>
    <string name="root">√</string>
    <string name="absolute">|x|</string>
    <string name="percent">%</string>
    <string name="expo">e</string>
    <string name="under">1/x</string>
    <string name="expoduble">e<sup>x</sup></string>
    <string name="sqr">x<sup>2</sup></string>



    <string name="backspace"> </string>
    <string name="display">Enter a value</string>
    <string name="history">history </string>
</resources>